--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ header h1 {
     letter-spacing: 1px;
 }
 
+.brand-logo {
+    width: 120px; 
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
 header p {
     margin: 10px 0 0 0;
     font-size: 1.2em;
